feat: implement S3 configuration, health check, and service splitting
## S3 Configuration & Health Check
- Add S3 health check function with detailed error guidance
- Verify AWS credentials, bucket access, and permissions at startup
- Enforce S3 connectivity as P0 critical requirement (fail-fast)
- Add S3 environment variables to docker-compose.yml
- Create K8s ConfigMap and Secret for S3 configuration
- Update .env.example with S3 bucket creation instructions

## Service Splitting (Phase 1)
- Extract media-service (videos, uploads, reels) from user-service
- Extract content-service (posts, comments, stories) from user-service
- Implement gRPC communication between services
- Add proto definitions for inter-service RPC
- Update docker-compose to support service mesh

## Configuration Updates
- Update docker-compose.yml with S3 environment variables
- Add S3_PRESIGNED_URL_EXPIRY_SECS configuration
- Update k8s ConfigMap with S3 bucket and region info
- Update k8s Secret with AWS credentials placeholders

## Build System
- Add build.rs scripts for gRPC code generation
- Update Cargo.toml dependencies for gRPC/Protobuf support
- Configure media-service and content-service as standalone binaries

## Migration from Monolithic to Microservices
- Removed posts, videos, likes, comments handlers from user-service
- Moved handler logic to dedicated services
- Updated main.rs to remove service-specific state initialization
- Prepared for independent deployment of services

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "user-service",
     "content-service",
+    "media-service",
     "messaging-service",
     "search-service",
     "libs/crypto-core"
@@ -105,6 +106,10 @@ urlencoding = "2.1"
 # ClickHouse client
 clickhouse = { version = "0.12" }
 rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
+
+# gRPC
+tonic = { version = "0.11", features = ["transport"] }
+prost = "0.12"
 
 # Swagger/OpenAPI
 # utoipa 用於生成 OpenAPI 3.0 規範
