--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -33,12 +33,12 @@ stringData:
   SMTP_PASSWORD: "your-app-password"
   SMTP_FROM: "noreply@nova.app"
 
-  # AWS S3
-  AWS_ACCESS_KEY_ID: "your_aws_access_key"
-  AWS_SECRET_ACCESS_KEY: "your_aws_secret_key"
-  S3_BUCKET_NAME: "nova-production"
-  S3_REGION: "us-east-1"
-  CLOUDFRONT_URL: "https://d123456789.cloudfront.net"
+  # AWS S3 - sonic-shih IAM user credentials
+  # IMPORTANT: Replace with actual credentials from sonic-shih IAM user
+  # Get credentials from: AWS Console → IAM → Users → sonic-shih → Security credentials
+  # Ensure sonic-shih has AmazonS3FullAccess policy attached
+  AWS_ACCESS_KEY_ID: "AKIA_YOUR_ACCESS_KEY_ID_HERE"
+  AWS_SECRET_ACCESS_KEY: "your_aws_secret_access_key_here"
 
 ---
 apiVersion: v1
