--- a/backend/content-service/Cargo.toml
+++ b/backend/content-service/Cargo.toml
@@ -62,9 +62,11 @@ image = "0.24"
 regex = "1"
 
 # gRPC (for inter-service communication)
-tonic = "0.14"
-prost = "0.12"
-http = "0.2"
+tonic.workspace = true
+prost.workspace = true
+
+[build-dependencies]
+tonic-build = "0.11"
 
 [dev-dependencies]
 tokio-test = "0.4"
