--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -92,6 +92,9 @@ once_cell = "1.19"
 # Swagger/OpenAPI
 utoipa.workspace = true
 
+[build-dependencies]
+tonic-build = "0.11"
+
 [dev-dependencies]
 tokio-test = "0.4"
 mockall = "0.12"
