fix(grpc): fix client concurrency by using &self instead of &mut self
- Changed all 13 gRPC client methods to use &self instead of &mut self
- Added client.clone() at start of each method for safe concurrent access
- Both ContentServiceClient (5 methods) and MediaServiceClient (8 methods)
- Fixes blocking issue preventing concurrent RPC calls
- Code compiles successfully with no errors

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -79,9 +79,9 @@ neo4rs = "0.8"
 tokio-stream = "0.1"
 regex = "1"
 
-# Phase 4: Video Processing
-tonic = "0.14"
-prost = "0.12"
+# Phase 4: Video Processing & gRPC
+tonic.workspace = true
+prost.workspace = true
 ndarray = "0.15"
 http = "0.2"
 
