--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -12,6 +12,7 @@ stringData:
 
   # Redis connection
   REDIS_URL: "redis://nova-redis:6379"
+  CLICKHOUSE_PASSWORD: ""
 
   # JWT Secrets - IMPORTANT: Replace with your actual keys
   # Generate with: openssl genpkey -algorithm RSA -out private.pem -pkeyopt rsa_keygen_bits:2048
