--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -16,6 +16,11 @@ upstream user_service {
     keepalive 32;
 }
 
+upstream content_service {
+    server content-service:8081 max_fails=2 fail_timeout=10s;
+    keepalive 32;
+}
+
 upstream messaging_service {
     server messaging-service:3000 max_fails=2 fail_timeout=10s;
     keepalive 32;
@@ -123,7 +128,7 @@ server {
     location /api/v1/feed/ {
         limit_req zone=api_limit burst=20 nodelay;
 
-        proxy_pass http://user_service;
+        proxy_pass http://content_service;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
