--- a/backend/media-service/Cargo.toml
+++ b/backend/media-service/Cargo.toml
@@ -36,6 +36,7 @@ futures = "0.3"
 actix-multipart = "0.4"
 image = "0.24"
 bytes = "1.5"
+crypto-core = { path = "../libs/crypto-core" }
 
 [build-dependencies]
 tonic-build = "0.11"
