feat: enhance search-service with Kafka events and ElasticSearch optimization
Improves search reliability and performance through event-driven updates
and advanced Elasticsearch query optimization.

Event consumer improvements (238 lines):
- Kafka consumer groups for distributed processing
- Dead-letter queue for failed message handling
- Idempotent event processing (at-least-once delivery)
- CDC (Change Data Capture) from messages and posts
- Event batching for bulk indexing efficiency

Elasticsearch enhancements (251 lines):
- Full-text search with fuzzy matching
- Faceted search (by user, date, conversation)
- Real-time indexing via Kafka events
- Index optimization with mapping templates
- Query scoring based on relevance and recency

Event handling architecture:
- message.created → index in ElasticSearch
- message.deleted → remove from index
- message.updated → reindex with new content
- post.published → add to feed search index
- post.deleted → remove from search index

Kafka integration:
- Topics: messages, posts, search-events
- Consumer groups: search-service-messages, search-service-posts
- Partition strategy: by conversation_id / user_id
- Offset management: committed after successful indexing

Search capabilities:
- Global search across all conversations
- Conversation-scoped search
- User-specific search history
- Full-text search with stemming and stop words

Performance optimizations:
- Batch indexing reduces ElasticSearch load
- Connection pooling for Kafka consumers
- Index sharding for parallel search
- Cached query results for popular searches

Resilience:
- Automatic index recreation on failure
- Backoff strategy for Kafka consumer errors
- Health checks for ElasticSearch availability
- Graceful degradation when search unavailable

Testing:
- Integration tests for event flow
- Search result validation tests
- Pagination and cursor tests

Documentation:
- README.md: Architecture and deployment guide
- Event schema documentation
- Search API specif

--- a/backend/search-service/Cargo.toml
+++ b/backend/search-service/Cargo.toml
@@ -27,12 +27,15 @@ redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
+rdkafka = { workspace = true }
 
 # Hashing
 md5 = "0.7"
 
 # OpenAPI
 utoipa = { workspace = true }
+elasticsearch = "8.19.0-alpha.1"
+url = "2"
 
 [profile.release]
 codegen-units = 1
