fix: Add JWT validation at API Gateway level for all protected endpoints

--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -35,6 +35,19 @@ upstream search_service {
 limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/s;
 limit_req_zone $binary_remote_addr zone=search_limit:10m rate=20r/s;
 
+# JWT validation - extract token from Authorization header
+# Format: Authorization: Bearer <token>
+map $http_authorization $token {
+    default "";
+    "Bearer ~^(?<token>.+)$" $token;
+}
+
+# JWT validation status
+map $jwt_validation_result $jwt_valid {
+    default "invalid";
+    "1" "valid";
+}
+
 # Main server block
 server {
     listen 80;
@@ -73,7 +86,8 @@ server {
     # Authentication & User Management (user-service)
     # ============================================
 
-    location /api/v1/auth/ {
+    # 公开认证端点 (无需 JWT)
+    location ~ ^/api/v1/auth/(register|login|logout|verify-email|forgot-password|reset-password|refresh-token)$ {
         limit_req zone=api_limit burst=20 nodelay;
 
         proxy_pass http://user_service;
@@ -83,12 +97,43 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # Let Nginx manage upstream connection defaults (avoid premature close on POST)
+        # 添加请求 ID 用于追踪
+        proxy_set_header X-Request-ID $request_id;
+    }
+
+    # 受保护的认证端点 (需要 JWT)
+    location ~ ^/api/v1/auth/ {
+        limit_req zone=api_limit burst=20 nodelay;
+
+        # JWT 验证：检查 Authorization header
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
+        if ($token = "") {
+            return 401 '{"error": "Unauthorized", "message": "Invalid Authorization header format. Use: Bearer <token>"}\n';
+        }
+
+        proxy_pass http://user_service;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        # 转发 Authorization header 给上游服务进行进一步验证
+        proxy_set_header Authorization $http_authorization;
     }
 
     location /api/v1/users/ {
         limit_req zone=api_limit burst=20 nodelay;
 
+        # JWT 验证 - 用户相关端点需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -96,12 +141,18 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # proxy_set_header Connection "";
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
     }
 
     location /api/v1/posts/ {
         limit_req zone=api_limit burst=20 nodelay;
 
+        # JWT 验证 - 发布/修改帖子需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -109,12 +160,18 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # proxy_set_header Connection "";
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
     }
 
     location /api/v1/comments/ {
         limit_req zone=api_limit burst=20 nodelay;
 
+        # JWT 验证 - 评论需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -122,11 +179,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # proxy_set_header Connection "";
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
     }
 
     location /api/v1/feed/ {
         limit_req zone=api_limit burst=20 nodelay;
+
+        # JWT 验证 - Feed 需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
 
         proxy_pass http://content_service;
         proxy_http_version 1.1;
@@ -135,11 +198,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # proxy_set_header Connection "";
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
     }
 
     location /api/v1/stories/ {
         limit_req zone=api_limit burst=20 nodelay;
+
+        # JWT 验证 - 故事需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
 
         proxy_pass http://user_service;
         proxy_http_version 1.1;
@@ -148,12 +217,19 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         # proxy_set_header Connection "";
     }
 
     location /api/v1/videos/ {
         limit_req zone=api_limit burst=10 nodelay;
 
+        # JWT 验证 - 视频需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -161,6 +237,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         # proxy_set_header Connection "";
 
         # Larger timeout for video processing
@@ -170,6 +248,11 @@ server {
     location /api/v1/uploads/ {
         limit_req zone=api_limit burst=10 nodelay;
 
+        # JWT 验证 - 上传需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -177,6 +260,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         # proxy_set_header Connection "";
 
         # Larger timeout for uploads
@@ -187,6 +272,11 @@ server {
     location /api/v1/streams/ {
         limit_req zone=api_limit burst=20 nodelay;
 
+        # JWT 验证 - 直播流需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -194,12 +284,19 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         # proxy_set_header Connection "";
     }
 
     location /api/v1/discover/ {
         limit_req zone=api_limit burst=20 nodelay;
 
+        # JWT 验证 - 发现页面需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -207,12 +304,19 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         # proxy_set_header Connection "";
     }
 
     location /api/v1/trending {
         limit_req zone=api_limit burst=20 nodelay;
 
+        # JWT 验证 - 热门趋势需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -220,12 +324,19 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         # proxy_set_header Connection "";
     }
 
     location /api/v1/events/ {
         limit_req zone=api_limit burst=50 nodelay;
 
+        # JWT 验证 - 事件需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -233,12 +344,19 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         proxy_set_header Connection "";
     }
 
     location /api/v1/admin/ {
         limit_req zone=api_limit burst=10 nodelay;
 
+        # JWT 验证 - 管理员端点需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://user_service;
         proxy_http_version 1.1;
 
@@ -246,6 +364,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         proxy_set_header Connection "";
     }
 
@@ -256,6 +376,11 @@ server {
     location /api/v1/conversations {
         limit_req zone=api_limit burst=20 nodelay;
 
+        # JWT 验证 - 会话需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://messaging_service;
         proxy_http_version 1.1;
 
@@ -263,6 +388,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
         proxy_set_header Authorization $http_authorization;
         proxy_set_header Connection "";
     }
@@ -270,6 +396,11 @@ server {
     location /api/v1/messages {
         limit_req zone=api_limit burst=20 nodelay;
 
+        # JWT 验证 - 消息需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://messaging_service;
         proxy_http_version 1.1;
 
@@ -277,6 +408,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
         proxy_set_header Authorization $http_authorization;
         proxy_set_header Connection "";
     }
@@ -288,6 +420,11 @@ server {
     location /api/v1/search/ {
         limit_req zone=search_limit burst=10 nodelay;
 
+        # JWT 验证 - 搜索需要认证以提供个性化结果
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
         proxy_pass http://search_service;
         proxy_http_version 1.1;
 
@@ -295,6 +432,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
         proxy_set_header Connection "";
     }
 
