--- a/backend/messaging-service/Cargo.toml
+++ b/backend/messaging-service/Cargo.toml
@@ -30,6 +30,8 @@ utoipa = { workspace = true }
 hmac = { workspace = true }
 sha2 = { workspace = true }
 hkdf = { workspace = true }
+x25519-dalek = "2.0"
+rand = "0.8"
 
 [profile.release]
 codegen-units = 1
