--- a/backend/messaging-service/Cargo.toml
+++ b/backend/messaging-service/Cargo.toml
@@ -32,10 +32,15 @@ sha2 = { workspace = true }
 hkdf = { workspace = true }
 x25519-dalek = "2.0"
 rand = "0.8"
+tonic = "0.11"
+prost = "0.12"
 
 [profile.release]
 codegen-units = 1
 lto = true
+
+[build-dependencies]
+tonic-build = "0.11"
 
 [dev-dependencies]
 testcontainers = "0.16"
