feat(tier3): standardize error handling and implement user preferences
TIER 3 FIXES - Error Handling & Feed Preferences:

1. Standardized error responses across all services
   - Created unified error-types library with ErrorResponse struct
   - Updated user-service error.rs to use ErrorResponse
   - Updated content-service error.rs to use ErrorResponse
   - Updated media-service error.rs to use ErrorResponse
   - Updated messaging-service middleware/error_handling.rs for JSON responses
   - Updated search-service main.rs error handling
   - All services now return consistent error format with:
     * error: HTTP status text
     * message: User-friendly error message
     * status: HTTP status code
     * error_type: validation_error, authentication_error, etc.
     * code: SERVICE_ERROR_CODE for tracking
     * details: Optional debug details
     * trace_id: Optional request tracing
     * timestamp: ISO 8601 timestamp

2. Implemented user feed preferences
   - Created preferences.rs handler with full CRUD operations
   - GET /api/v1/users/me/preferences - fetch user preferences
   - PUT /api/v1/users/me/preferences - update preferences
   - POST /api/v1/users/me/preferences/blocked-users/{id} - block user
   - DELETE /api/v1/users/me/preferences/blocked-users/{id} - unblock user
   - Full support for language, age_filter, safety_filter_level, muted topics
   - Database migration 064: user_feed_preferences table with JSONB support

3. Fixed feed ranking NaN panic
   - Changed unsafe unwrap() to safe match on partial_cmp result
   - Added logging for NaN detection in scoring
   - Returns Ordering::Equal for NaN scores instead of panicking

4. Added error-types library to all services
   - Uniform error response format across 5 microservices
   - Consistent error codes and types for client handling
   - Supports both Actix and Axum frameworks

All services now pass error-types as dependency for consistent error handling.

--- a/backend/media-service/Cargo.toml
+++ b/backend/media-service/Cargo.toml
@@ -37,6 +37,7 @@ actix-multipart = "0.4"
 image = "0.24"
 bytes = "1.5"
 crypto-core = { path = "../libs/crypto-core" }
+error-types = { path = "../libs/error-types" }
 
 [build-dependencies]
 tonic-build = "0.11"
