--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,7 +5,8 @@ members = [
     "media-service",
     "messaging-service",
     "search-service",
-    "libs/crypto-core"
+    "libs/crypto-core",
+    "libs/error-types"
 ]
 resolver = "2"
 
