--- a/backend/content-service/Cargo.toml
+++ b/backend/content-service/Cargo.toml
@@ -53,6 +53,7 @@ urlencoding.workspace = true
 clickhouse.workspace = true
 utoipa.workspace = true
 crypto-core = { path = "../libs/crypto-core" }
+error-types = { path = "../libs/error-types" }
 
 # Service-specific dependencies
 futures = "0.3"
