--- a/backend/messaging-service/Cargo.toml
+++ b/backend/messaging-service/Cargo.toml
@@ -34,6 +34,7 @@ x25519-dalek = "2.0"
 rand = "0.8"
 tonic = "0.11"
 prost = "0.12"
+error-types = { path = "../libs/error-types" }
 
 [profile.release]
 codegen-units = 1
