--- a/backend/media-service/Cargo.toml
+++ b/backend/media-service/Cargo.toml
@@ -30,6 +30,7 @@ anyhow = { workspace = true }
 thiserror = { workspace = true }
 tonic = { workspace = true }
 prost = { workspace = true }
+utoipa = { workspace = true }
 
 # Media-specific dependencies
 futures = "0.3"
