--- a/backend/media-service/Cargo.toml
+++ b/backend/media-service/Cargo.toml
@@ -39,6 +39,8 @@ image = "0.24"
 bytes = "1.5"
 crypto-core = { path = "../libs/crypto-core" }
 error-types = { path = "../libs/error-types" }
+aws-sdk-s3 = "1.9"
+aws-config = "1.1"
 
 [build-dependencies]
 tonic-build = "0.11"
