fix(arch): consolidate FCM implementations into shared library - P0 defect resolution
- Creates nova-fcm-shared library with production-grade FCM client
- Eliminates code duplication between notification-service and user-service
- Both services now re-export from shared library for backward compatibility
- Reduces codebase by 431 lines while maintaining full functionality
- Single source of truth for Firebase Cloud Messaging integration
- Supports multicast, topic subscriptions, token caching, and OAuth2 auth

Resolves: P0 code duplication issue identified in COMPREHENSIVE_BACKEND_REVIEW

Statistics:
- 656 lines of well-organized shared library code
- 1,087 lines of duplicate code consolidated
- Net reduction: 431 lines

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,7 +13,8 @@ members = [
     "events-service",
     "libs/crypto-core",
     "libs/error-types",
-    "libs/redis-utils"
+    "libs/redis-utils",
+    "libs/nova-fcm-shared"
 ]
 resolver = "2"
 
