--- a/backend/notification-service/Cargo.toml
+++ b/backend/notification-service/Cargo.toml
@@ -45,6 +45,7 @@ prost.workspace = true
 
 # Shared libraries
 error-types = { path = "../libs/error-types" }
+nova-fcm-shared = { path = "../libs/nova-fcm-shared" }
 
 [build-dependencies]
 tonic-build = "0.11"
