feat: consolidate APNs implementations into shared library
- Create nova-apns-shared library with production-grade APNs client
- Add ApnsConfig and ApnsPush to shared library
- Replace messaging-service implementation with re-export
- Convert notification-service APNsClient to adapter over shared library
- Eliminate duplicate code and establish single source of truth for APNs
- Update workspace Cargo.toml to include nova-apns-shared
- All services compile successfully
- Maintain 100% backward compatibility

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,7 +14,8 @@ members = [
     "libs/crypto-core",
     "libs/error-types",
     "libs/redis-utils",
-    "libs/nova-fcm-shared"
+    "libs/nova-fcm-shared",
+    "libs/nova-apns-shared"
 ]
 resolver = "2"
 
