feat(recommendation-service): phase 3.1-3.2 complete - recommendation_v2 migration and HTTP API
Phase 3.1: Code Migration
- Migrated all 6 recommendation_v2 modules from user-service to recommendation-service:
  * ab_testing.rs - A/B testing framework with consistent hashing
  * collaborative_filtering.rs - Collaborative filtering model (k-NN)
  * content_based.rs - Content-based filtering with TF-IDF
  * hybrid_ranker.rs - Hybrid ranker with MMR diversity optimization
  * onnx_serving.rs - ONNX model serving with hot-reload
  * mod.rs - Main RecommendationServiceV2 coordinator
- Added proper error handling with From<io::Error> and From<serde_json::Error> conversions
- Fixed type mismatches and unused variable warnings

Phase 3.2: HTTP API Implementation
- Implemented 3 HTTP endpoints:
  * GET /api/v1/recommendations - Get personalized recommendations for authenticated user
  * GET /api/v1/recommendations/model-info - Get model version information
  * POST /api/v1/recommendations/rank - Internal ranking API (with service auth)
- Integrated handlers into main.rs with proper service initialization
- Added RecommendationHandlerState for dependency injection
- All compilation errors fixed, ready for testing

Architecture:
- RecommendationServiceV2 coordinates all recommendation components
- Hybrid weights: 40% collaborative, 30% content-based, 30% v1.0 fallback
- A/B testing framework with 0-100 user bucket allocation
- Graceful degradation with fallback to trending posts
- Model info endpoint for monitoring deployed versions

Next: Phase 3.3 will add gRPC service definition and Proto implementation

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "auth-service",
     "user-service",
     "content-service",
     "media-service",
@@ -14,8 +15,12 @@ members = [
     "libs/crypto-core",
     "libs/error-types",
     "libs/redis-utils",
+    "libs/db-pool",
+    "libs/error-handling",
+    "libs/video-core",
     "libs/nova-fcm-shared",
-    "libs/nova-apns-shared"
+    "libs/nova-apns-shared",
+    "libs/event-schema"
 ]
 resolver = "2"
 
