--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -16,6 +16,11 @@ upstream user_service {
     keepalive 32;
 }
 
+upstream auth_service {
+    server auth-service:8080 max_fails=2 fail_timeout=10s;
+    keepalive 32;
+}
+
 upstream content_service {
     server content-service:8081 max_fails=2 fail_timeout=10s;
     keepalive 32;
@@ -29,6 +34,13 @@ upstream messaging_service {
 upstream search_service {
     server search-service:8086 max_fails=2 fail_timeout=10s;
     keepalive 32;
+}
+
+# Split traffic for canary deployment
+# 70% to content_service (new), 30% to user_service (legacy)
+split_clients $remote_addr $content_backend {
+    70% "content_service";
+    30% "user_service";
 }
 
 # Rate limiting zones
@@ -101,13 +113,13 @@ server {
     }
 
     # ============================================
-    # Authentication & User Management (user-service)
+    # Authentication & Authorization (auth-service)
     # ============================================
 
     # 公开认证端点 (无需 JWT)
     location ~ ^/api/v1/auth/(register)$ {
         limit_req zone=auth_register_limit burst=2 nodelay;
-        proxy_pass http://user_service;
+        proxy_pass http://auth_service;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
@@ -120,21 +132,20 @@ server {
     location ~ ^/api/v1/auth/(login|reset-password|refresh-token)$ {
         limit_req zone=auth_login_limit burst=1 nodelay;
 
-        proxy_pass http://user_service;
+        proxy_pass http://auth_service;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # 添加请求 ID 用于追踪
         proxy_set_header X-Request-ID $request_id;
     }
 
     location ~ ^/api/v1/auth/(logout|verify-email|forgot-password)$ {
         limit_req zone=api_limit burst=20 nodelay;
 
-        proxy_pass http://user_service;
+        proxy_pass http://auth_service;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
@@ -157,7 +168,7 @@ server {
             return 401 '{"error": "Unauthorized", "message": "Invalid Authorization header format. Use: Bearer <token>"}\n';
         }
 
-        proxy_pass http://user_service;
+        proxy_pass http://auth_service;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
@@ -165,7 +176,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Request-ID $request_id;
-        # 转发 Authorization header 给上游服务进行进一步验证
         proxy_set_header Authorization $http_authorization;
     }
 
@@ -196,7 +206,8 @@ server {
             return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
         }
 
-        proxy_pass http://user_service;
+        # Canary deployment: 70% to content-service, 30% to user-service
+        proxy_pass http://$content_backend;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
@@ -205,6 +216,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Request-ID $request_id;
         proxy_set_header Authorization $http_authorization;
+        # Add canary deployment tracking header
+        proxy_set_header X-Canary-Deployment "content-service-v1";
     }
 
     location /api/v1/comments/ {
@@ -215,7 +228,8 @@ server {
             return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
         }
 
-        proxy_pass http://user_service;
+        # Canary deployment: 70% to content-service, 30% to user-service
+        proxy_pass http://$content_backend;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
@@ -224,6 +238,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Request-ID $request_id;
         proxy_set_header Authorization $http_authorization;
+        # Add canary deployment tracking header
+        proxy_set_header X-Canary-Deployment "content-service-v1";
     }
 
     location /api/v1/feed/ {
