--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -4,9 +4,12 @@
 # All services are accessible through port 3000 with proper routing.
 #
 # Service Mapping:
-# - user-service:8080       -> /api/v1/auth/*, /api/v1/users/*, /api/v1/posts/*, etc.
-# - messaging-service:3000  -> /api/v1/conversations/*, /api/v1/messages/*
-# - search-service:8086     -> /api/v1/search/*
+# - user-service:8080              -> /api/v1/auth/*, /api/v1/users/*, /api/v1/posts/*, etc.
+# - auth-service:8080              -> /api/v1/auth/*
+# - content-service:8081           -> /api/v1/posts/*, /api/v1/comments/*, /api/v1/feed/*
+# - messaging-service:3000         -> /api/v1/conversations/*, /api/v1/messages/*
+# - search-service:8086            -> /api/v1/search/*
+# - recommendation-service:8000    -> /api/v1/recommendations/*, /api/v1/trending/*
 #
 # Unified entry point: http://localhost:3000
 
@@ -36,6 +39,11 @@ upstream search_service {
     keepalive 32;
 }
 
+upstream recommendation_service {
+    server recommendation-service:8000 max_fails=2 fail_timeout=10s;
+    keepalive 32;
+}
+
 # Split traffic for canary deployment
 # 70% to content_service (new), 30% to user_service (legacy)
 split_clients $remote_addr $content_backend {
@@ -48,6 +56,7 @@ limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/s;
 limit_req_zone $binary_remote_addr zone=search_limit:10m rate=20r/s;
 limit_req_zone $binary_remote_addr zone=auth_register_limit:10m rate=10r/m;
 limit_req_zone $binary_remote_addr zone=auth_login_limit:10m rate=5r/m;
+limit_req_zone $binary_remote_addr zone=recommendations_limit:10m rate=50r/s;
 
 # JWT validation - extract token from Authorization header
 # Format: Authorization: Bearer <token>
@@ -259,6 +268,110 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Request-ID $request_id;
         proxy_set_header Authorization $http_authorization;
+    }
+
+    # ============================================
+    # Recommendations (recommendation-service)
+    # ============================================
+
+    # GET /api/v1/recommendations - Get personalized recommendations
+    location ~ ^/api/v1/recommendations/?$ {
+        limit_req zone=recommendations_limit burst=10 nodelay;
+
+        # JWT 验证 - 推荐需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
+        # Only allow GET and HEAD methods
+        if ($request_method !~ ^(GET|HEAD)$) {
+            return 405 '{"error": "Method Not Allowed", "message": "Only GET requests are allowed"}\n';
+        }
+
+        proxy_pass http://recommendation_service;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
+    }
+
+    # GET /api/v1/recommendations/model-info - Get model version info
+    location ~ ^/api/v1/recommendations/model-info/?$ {
+        limit_req zone=api_limit burst=20 nodelay;
+
+        # JWT 验证 - 获取模型信息需要认证
+        if ($http_authorization = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing Authorization header"}\n';
+        }
+
+        # Only allow GET and HEAD methods
+        if ($request_method !~ ^(GET|HEAD)$) {
+            return 405 '{"error": "Method Not Allowed", "message": "Only GET requests are allowed"}\n';
+        }
+
+        proxy_pass http://recommendation_service;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header Authorization $http_authorization;
+    }
+
+    # POST /api/v1/recommendations/rank - Internal ranking API
+    location ~ ^/api/v1/recommendations/rank/?$ {
+        limit_req zone=api_limit burst=10 nodelay;
+
+        # Internal service-to-service only - check for service token
+        if ($http_x_service_token = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing x-service-token header"}\n';
+        }
+
+        # Only allow POST and HEAD methods
+        if ($request_method !~ ^(POST|HEAD)$) {
+            return 405 '{"error": "Method Not Allowed", "message": "Only POST requests are allowed"}\n';
+        }
+
+        proxy_pass http://recommendation_service;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header X-Service-Token $http_x_service_token;
+    }
+
+    # POST /api/v1/recommendations/semantic-search - Semantic search using Milvus vectors
+    location ~ ^/api/v1/recommendations/semantic-search/?$ {
+        limit_req zone=recommendations_limit burst=10 nodelay;
+
+        # Internal service-to-service only - check for service token
+        if ($http_x_service_token = "") {
+            return 401 '{"error": "Unauthorized", "message": "Missing x-service-token header"}\n';
+        }
+
+        # Only allow POST and HEAD methods
+        if ($request_method !~ ^(POST|HEAD)$) {
+            return 405 '{"error": "Method Not Allowed", "message": "Only POST requests are allowed"}\n';
+        }
+
+        proxy_pass http://recommendation_service;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Request-ID $request_id;
+        proxy_set_header X-Service-Token $http_x_service_token;
     }
 
     location /api/v1/stories/ {
